--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -12,8 +12,8 @@
         <fragment
             android:id="@+id/mapView_navigation"
             android:name="com.naver.maps.map.MapFragment"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toTopOf="@id/bottom_panel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,33 +26,118 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="40dp"
-            android:background="@android:color/white"
+            android:background="@drawable/bg_box_white_top_12"
             android:elevation="8dp"
-            android:padding="16dp"
+            android:padding="8dp"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/tv_current_instruction"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="경로를 찾는 중..."
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                android:textStyle="bold"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/clRouteNotification"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:alpha="0.6"
+                android:background="@drawable/bg_route_noti"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible">
+
+                <ImageView
+                    android:id="@+id/ivRouteDirection"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_nav_straight_1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/tvRemainingJunctionDistance"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="0m"
+                android:textColor="@android:color/black"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/clRouteNotification"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_next_instruction"
-                android:layout_width="match_parent"
+                android:id="@+id/tvCurrentInstruction"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:gravity="center_vertical"
+                android:text="경로를 찾는 중..."
+                android:textColor="@android:color/black"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/clRouteNotification"
+                app:layout_constraintTop_toBottomOf="@+id/tvRemainingJunctionDistance" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:background="@drawable/bg_box_white_bottom_12"
+            android:elevation="8dp"
+            android:padding="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/instruction_card">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/clRouteNextNotification"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:alpha="0.6"
+                android:background="@drawable/bg_route_noti"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible">
+
+                <ImageView
+                    android:id="@+id/ivRouteNextDirection"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_nav_straight_1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/tvNextInstructionDistance"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0m"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/clRouteNextNotification"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvNextInstruction"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:text=""
                 android:textColor="@android:color/darker_gray"
                 android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_current_instruction" />
-
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/clRouteNextNotification"
+                app:layout_constraintTop_toBottomOf="@+id/tvNextInstructionDistance" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- 우상단: 음성 안내 토글 -->
@@ -110,16 +195,18 @@
             android:textSize="14sp"
             android:textStyle="bold"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/progress_navigation"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_panel"
             app:layout_constraintEnd_toEndOf="parent"
             tools:visibility="visible" />
 
         <!-- 하단: 거리/시간 정보 및 안내 중지 버튼 -->
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/bottom_panel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/bg_box_white_12"
             android:elevation="8dp"
             android:orientation="horizontal"
             android:padding="16dp"
@@ -127,101 +214,87 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
+            <!-- 진행률 바 (하단 패널 위에 표시) -->
+            <ProgressBar
+                android:id="@+id/progress_navigation"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:max="100"
+                android:progress="0"
+                android:progressTint="@android:color/holo_blue_bright"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <!-- 거리 정보 -->
             <TextView
-                android:id="@+id/tv_remaining_distance"
+                android:id="@+id/tvRemainingDistance"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="0dp"
                 android:gravity="center"
-                android:text="남은 거리: 0km"
+                android:text="0km"
+                android:layout_marginTop="8dp"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/tv_remaining_time"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/progress_navigation" />
 
             <!-- 시간 정보 -->
             <TextView
                 android:id="@+id/tv_remaining_time"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="0dp"
                 android:gravity="center"
-                android:text="남은 시간: 0분"
+                android:text="0분"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btn_stop_navigation"
+                app:layout_constraintStart_toEndOf="@+id/tvRemainingDistance"
+                app:layout_constraintTop_toTopOf="@+id/tvRemainingDistance" />
 
             <!-- 안내 중지 버튼 -->
             <Button
                 android:id="@+id/btn_stop_navigation"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:background="@android:color/holo_red_light"
                 android:text="중지"
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                android:visibility="gone" />
-
-        </LinearLayout>
-
-        <!-- 진행률 바 (하단 패널 위에 표시) -->
-        <ProgressBar
-            android:id="@+id/progress_navigation"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="0dp"
-            android:layout_height="4dp"
-            android:layout_marginBottom="80dp"
-            android:max="100"
-            android:progress="0"
-            android:progressTint="@android:color/holo_blue_bright"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <!-- 현재 속도 표시 -->
-        <TextView
-            android:id="@+id/tv_current_speed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:alpha="0.5"
-            android:background="#66000000"
-            android:paddingHorizontal="16dp"
-            android:paddingVertical="12dp"
-            android:text="-- km/h"
-            android:textColor="@color/white"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/instruction_card"
-            tools:text="45 km/h" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clRouteNotification"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:alpha="0.6"
-            android:visibility="gone"
-            tools:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/bg_route_noti"
-            app:layout_constraintTop_toBottomOf="@+id/instruction_card">
-
-            <ImageView
-                android:id="@+id/ivRouteDirection"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/ic_nav_straight_1"
-                android:layout_width="120dp"
-                android:layout_height="120dp"/>
+                app:layout_constraintTop_toTopOf="@+id/tvRemainingDistance" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <!-- 현재 속도 표시 -->
+        <com.dom.samplenavigation.view.CustomTextOutlineView
+            android:id="@+id/tv_current_speed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/bold"
+            android:paddingStart="16dp"
+            android:paddingEnd="0dp"
+            android:text="0"
+            android:textColor="@color/white"
+            android:textSize="42sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:textStroke="true"
+            app:textStrokeColor="@color/black"
+            app:textStrokeWidth="20.0"
+            tools:text="50" />
 
         <!-- 로딩 인디케이터 -->
         <ProgressBar
