--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,8 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.SampleNavigation" parent="Base.Theme.SampleNavigation" />
+    <style name="Theme.SampleNavigation" parent="Base.Theme.SampleNavigation" >
+        <!-- font -->
+        <item name="android:fontFamily">@font/medium</item>
+    </style>
 </resources>
